# ZoomCamp-HW

./: README.md  Week1.md  Week2.md  Week3.md  Week4.md  Week5.md
25-MLOps/: CLAUDE.md  README.md  pyproject.toml
25-MLOps/Module01/: MLOps_Homework01.py
25-MLOps/Module01/__marimo__/: MLOps_Homework01.html
25-MLOps/Module02/: hpo.py  info_for_md.txt  mlflow.db  register_model.py  train.py
25-MLOps/Module02/mlruns/0/: meta.yaml
25-MLOps/Module02/mlruns/0/30346d92a31b41999f90ea3d2f2efcf2/: meta.yaml
25-MLOps/Module02/mlruns/0/80f2308731244206a05ef17f7551a3c5/: meta.yaml
25-MLOps/Module03/: grab_data.py  scrape.py  setup_prefect.py
25-MLOps/Module03/config/: data_sources.yaml  scraping.yaml
25-MLOps/Module03/raw_data/: horse_racing_data_2025-06-01.parquet
25-MLOps/Module03/src/: __init__.py
25-MLOps/Module03/src/config/: __init__.py  schemas.py  settings.py
25-MLOps/Module03/src/data/: __init__.py  exporters.py  transformers.py  validators.py
25-MLOps/Module03/src/flows/: __init__.py  daily_scrape.py  monitoring.py
25-MLOps/Module03/src/scrapers/: __init__.py  base.py  tab_scraper.py
25-MLOps/Module03/tutorials/: 01_polars_basics.py  02_web_scraping_ethics.md  03_prefect_concepts.py  04_betting_analytics.py
25-MLOps/Module05/: homework.md
25-MLOps/django_practice/: db.sqlite3
25-MLOps/django_practice/books/: models.py
25-MLOps/django_practice/books/management/commands/: analyze_queries.py
25-MLOps/django_practice/books/migrations/: 0001_initial.py
25-MLOps/django_practice/practice_project/: asgi.py  settings.py  urls.py  wsgi.py
(+67 files in other folders)
